deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-coin-deploy
  namespace: default
  labels:
    app: web-coin
    enviroment: cluster-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-coin
  template:
    metadata:
      labels:
        app: web-coin
    spec:
      containers:
      - name: web-coin
        image: natai7/fastapi_html_bitcoin_printer:0.02
        ports:
        - containerPort: 81
        resources: # optional and dont set cpu limit
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            memory: 500Mi
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: web-coin-service
  namespace: default
  labels:
    enviroment: cluster-a
spec:
  #type: NodePort
  selector:
    app: web-coin
  ports:
  - protocol: TCP
    port: 81
    targetPort: 81
    #nodePort: 30081 #port for entry to node
---
apiVersion: v1
kind: Service
metadata:
  name: blank-service
  namespace: default
  labels:
    enviroment: cluster-a
spec:
  #type: NodePort
  ports:
  - protocol: TCP
    port: 82
    targetPort: 82
    #nodePort: 30082 #port for entry to node
