ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coin-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /service-A(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: web-coin-service
            port:
              number: 81
      - path: /service-B(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: blank-service
            port:
              number: 82
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: web-coin-service
            port:
              number: 81
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: web-coin-service
#             port:
#               number: 81
